IJPL-198 fix loadingResult.addAll in test mode where there is no application info
GitOrigin-RevId: 4efe9fce527660bc9021a34e96c5e352a0098663